WIP business/presentation split